[package]
name = "mao_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
env_logger = "0.11.5"
futures-channel = "0.3.31"
futures-util = "0.3.31"
log = "0.4.22"
mao_core = { version = "0.1.0", path = "../mao_core" }
rand = "0.8.5"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
tungstenite = "0.24.0"
